--- a/src/style/detail.scss
+++ b/src/style/detail.scss
@@ -12,6 +12,7 @@
         padding-right: 12px;
         padding-top: 20px;
         margin-top: 30px;
+        padding-bottom: 100px;
         .title{
             font-size: 20px;
             color: #292929;
@@ -27,5 +28,74 @@
     .weui-media-box {
         padding: 16px;
         position: relative;
+    }
+    .cart-nav{
+        background: #FFFFFF;
+        box-shadow: 0 -10px 20px 0 rgba(0,0,0,0.10);
+        height: 50px;
+        width: 100%;
+        line-height: 50px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        a{
+            width: 48px;
+            height: 48px;
+            background-image: linear-gradient(90deg, #FC6000 0%, #FFB36A 100%);
+            display: inline-block;
+            border-radius: 100%;
+            text-align: center;
+            color: #fff;
+            margin-left: 12px;
+            margin-top: 2px;
+            position: relative;
+            em{
+                background: #FC6000;
+                border: 2px solid #FFFFFF;
+                min-width: 20px;
+                height: 20px;
+                color: #fff;
+                border-radius: 20px;
+                position: absolute;
+                top: -8px;
+                right: -8px;
+                line-height: normal;
+                font-size: 12px;
+            }
+        }
+        button{
+            background-image: linear-gradient(90deg, #FC6000 0%, #FFB36A 100%);
+            width: 120px;
+            float: right;
+            height: 50px;
+            color: #fff;
+            font-size: 14px;
+            border: 0;
+        }
+    }
+    .add-buy{
+        text-align: right;
+        margin-top: 30px;
+        button{
+            width: 26px;
+            height: 26px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            display: inline-block;
+        }
+        span{
+            color: #333;
+            display: inline-block;
+            height: 26px;
+            vertical-align: bottom;
+            text-align: center;
+            margin: 0 10px;
+        }
+        .add{
+            background-image: url('../images/add.png');
+        }
+        .jian{
+            background-image: url('../images/jian.png');
+        }
     }
 }
